--- a/assets/frontend/default-new/css/responsive.css
+++ b/assets/frontend/default-new/css/responsive.css
@@ -463,6 +463,7 @@ strong{
   .h-1-banner .h-1-banner-text h1 {
     font-size: 35px;
     margin-bottom: 12px;
+    margin-top: 14px;
   }
 /* Slider Area  Start */
     .student {
@@ -1036,7 +1037,7 @@ strong{
         justify-content: center;
       }
       .h-1-banner .h-1-banner-text h1 {
-        margin-top: 29px;
+        margin-top:5px;
       }
       .h-1-banner .bannar-card {
         position: static;
